<resources>
    <string name="app_name">vinos</string>
    <string name="action_settings">Preferencias</string>
    <string name="title_activity_inicio_sesion">Inicio de sesion</string>
    <string name="action_logout">Cerrar sesion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electroncio</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Inicie sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Correo electroncio no valido</string>
    <string name="error_invalid_password">Clave muy pequenia</string>
    <string name="error_incorrect_password">Su clave es incorrecta</string>
    <string name="error_field_required">Se requiere un valor</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="lista_vacia">La lista esta vacia</string>
    <string name="msg_no_busqueda">No existe busqueda</string>
    <string name="btn_nuevo">Nuevo vino</string>

    <string name="titilo_advertencia">Adevertencia!</string>
    <string name="salir_sesion">Salir de sesion</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="txt_nombre">Nombre</string>
    <string name="txt_pais">Pais</string>
    <string name="txt_marca">Marca</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_anio">Año</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_foto">Foto</string>

    <string name="tlt_vino">Registro de vinos</string>
</resources>
