<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:minWidth="300dp"
        android:minHeight="400dp"
        android:padding="@dimen/fab_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/txt_nombre"
            />
        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="fill"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/txt_pais"
            />
        <Spinner
            android:id="@+id/txt_pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="fill"
            android:spinnerMode="dropdown"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/txt_tipo"
            />
        <Spinner
            android:id="@+id/txt_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="fill"
            android:spinnerMode="dropdown"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/txt_marca"
            />
        <Spinner
            android:id="@+id/txt_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="fill"
            android:spinnerMode="dropdown"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/txt_precio"
            />
        <EditText
            android:id="@+id/txt_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="fill"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/txt_anio"
            />
        <Spinner
            android:id="@+id/txt_anio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="fill"
            android:spinnerMode="dropdown"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/dialog_divider" />
        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="0">
            <Button
                android:id="@+id/dialogButtonEscoger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_aceptar"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"

                />
            <Button
                android:id="@+id/dialogButtonCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>